--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,49 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  background-image: linear-gradient(79deg, #73f773, #6069e7 48%,#e8eb52);
 }
 
-.App-link {
-  color: #61dafb;
+.auth-from-container, .from-login, .form-register{
+    display: flex;
+    flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.auth-from-container{
+    padding: 5rem;
+    border: 1px solid white;
+    border-radius: 10px;
 }
+
+label{
+    text-align: left;
+    padding: 0.25rem 0;
+}
+
+input{
+    margin: 0.5rem 0;
+    padding: 1rem;
+    border: none;
+    border-radius: 10px;
+}
+
+button{
+    border: none;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #6069e7;
+}
+
+
+.link-btn{
+    background: none;
+    color: white;
+    text-decoration: underline;
+}
+
