--- a/front/next/components/styles.css
+++ b/front/next/components/styles.css
@@ -1,9 +1,15 @@
 .container-maps {
     width: 100%;
     height: 100%;
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     justify-content: center;
     align-items: center;
+
+}
+
+.container-principal {
+    padding-left: 20px;
 }
 
 .Grid_content_maps {
@@ -14,7 +20,109 @@
     gap: 10px;
     margin-left: 0;
     margin-right: auto;
-    background-color: bisque;
+    padding-bottom: 20px;
+}
+
+.lista-reportes {
+    width: 60%;
+    height: 40%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+}
+
+.container-titles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: 80%;
+    height: 5vh;
+    justify-content: center;
+    align-items: end;
+    gap: 10px;
+    /* Modificado */
+    background-color: aliceblue;
+    border-radius: 10px;
+}
+
+.container-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 10px rgba(80, 14, 14, 0.638);
+    border-radius: 10px;
+
+}
+
+.container-reportedMaps {
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+}
+
+.filter-reportedMaps {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 20px;
+}
+
+.input-search {
+    width: 30%;
+    height: 100%;
+    padding: 10px;
+    border: 2px solid #BF0A1D;
+    border-radius: 5px;
+    font-size: 16px;
+    outline: none;
+}
+
+.input-search::placeholder {
+    color: #BF0A1D;
+    /* Color del marcador de posición */
+}
+
+
+.container-titles p:nth-child(5) {
+    padding-left: 100px;
+}
+
+.info-reportedMap {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #F2D2CE;
+    justify-self: center;
+    align-items: center;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(232, 147, 147, 0.638);
+    padding-bottom: 10px;
+
+}
+
+.span-content {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .info-map {
@@ -26,6 +134,33 @@
     margin-right: auto;
     justify-content: center;
     align-items: center;
+    background-color: aliceblue;
+    border-radius: 10px;
+
+}
+
+.container-reported-maps {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.noReported-maps-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #f0f0f0;
+    color: #333;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    gap: 20px;
 
 }
 
@@ -43,12 +178,20 @@
 
 .info-map_container-datos {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr;
+    grid-template-columns: 3fr 10fr 3fr 3fr;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
     gap: 10em;
+}
+
+.container-titles p {
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+    /* Add this line to make the borders rounded */
 }
 
 .info-map_container-text {
@@ -68,5 +211,6 @@
     height: 100%;
     justify-content: center;
     align-items: center;
+    padding-right: 20px;
     gap: 1em;
 }
