--- a/front/next/components/styles.css
+++ b/front/next/components/styles.css
@@ -23,6 +23,10 @@
     padding-bottom: 20px;
 }
 
+.container-filter-users {
+    gap: 10px;
+}
+
 .lista-reportes {
     width: 60%;
     height: 40%;
@@ -254,13 +258,12 @@
 
 .info-maps {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 100%;
     color: white;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
-    justify-content: center;
     padding: 15px 20px 15px 20px;
     text-align: center;
     align-items: center;
@@ -335,11 +338,11 @@
 
 .grid-container-iconos {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr 2fr;
     width: 100%;
     height: 100%;
-    justify-content: center;
     align-items: center;
     padding-right: 20px;
     gap: 1em;
+    margin-left: auto;
 }
